{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "3c56919e-d3fa-459c-9ac3-3765ad73d994",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Value",
                    "id": "eae11a4b-8d44-47d3-b617-18fb2e2db5dd",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "8d0ee81e-37c5-4cfc-8b53-a46e35175b6f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec1fe4da-f983-4f76-9cb1-704160f25fb1",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44f3bf7f-9ccd-42b9-85ce-d63d412e2f4d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}